usato classe factory per instanziare i controller .qml adattato le altre classi

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,7 @@ SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 
 # configurazione ambiente QT
-FIND_PACKAGE(Qt5 COMPONENTS Core Qml Quick Network LinguistTools REQUIRED)
+FIND_PACKAGE(Qt5 COMPONENTS Core Gui Qml Quick Network LinguistTools REQUIRED)
 
 MESSAGE("Qt5Core_VERSION: ${Qt5Core_VERSION}")
 MESSAGE("Qt5Core_LIBRARIES: ${Qt5Core_LIBRARIES}")
@@ -88,6 +88,14 @@ MESSAGE("Qt5Core_DEFINITIONS: ${Qt5Core_DEFINITIONS}")
 MESSAGE("Qt5Core_COMPILE_DEFINITIONS: ${Qt5Core_COMPILE_DEFINITIONS}")
 MESSAGE("Qt5Core_FOUND: ${Qt5Core_FOUND}")
 MESSAGE("Qt5Core_EXECUTABLE_COMPILE_FLAGS: ${Qt5Core_EXECUTABLE_COMPILE_FLAGS}")
+
+MESSAGE("Qt5Gui_VERSION: ${Qt5Gui_VERSION}")
+MESSAGE("Qt5Gui_LIBRARIES: ${Qt5Gui_LIBRARIES}")
+MESSAGE("Qt5Gui_INCLUDE_DIRS: ${Qt5Gui_INCLUDE_DIRS}")
+MESSAGE("Qt5Gui_DEFINITIONS: ${Qt5Gui_DEFINITIONS}")
+MESSAGE("Qt5Gui_COMPILE_DEFINITIONS: ${Qt5Gui_COMPILE_DEFINITIONS}")
+MESSAGE("Qt5Gui_FOUND: ${Qt5Gui_FOUND}")
+MESSAGE("Qt5Gui_EXECUTABLE_COMPILE_FLAGS: ${Qt5Gui_EXECUTABLE_COMPILE_FLAGS}")
 
 MESSAGE("Qt5Qml_VERSION: ${Qt5Qml_VERSION}")
 MESSAGE("Qt5Qml_LIBRARIES: ${Qt5Qml_LIBRARIES}")
@@ -123,9 +131,10 @@ MESSAGE("Qt5LinguistTools_EXECUTABLE_COMPILE_FLAGS: ${Qt5LinguistTools_EXECUTABL
 
 SET(QT_LIBRARIES
     ${Qt5Core_LIBRARIES}
+    ${Qt5Gui_LIBRARIES}
     ${Qt5Qml_LIBRARIES}
     ${Qt5Quick_LIBRARIES}
-    ${Qt5Netowrk_LIBRARIES}
+    ${Qt5Network_LIBRARIES}
     ${Qt5LinguistTools_LIBRARIES}
     )
 MESSAGE("QT_LIBRARIES: ${QT_LIBRARIES}")
