--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -3,6 +3,7 @@ SET(ITEMS
     Logger
     Settings
     Types
+    FactoryQml
     )
 
 FOREACH(ITEM ${ITEMS})
@@ -33,3 +34,11 @@ MESSAGE("${CMAKE_CURRENT_SOURCE_DIR}/PROJECT_SOURCES: ${PROJECT_SOURCES}")
 MESSAGE("${CMAKE_CURRENT_SOURCE_DIR}/PROJECT_HEADERS: ${PROJECT_HEADERS}")
 MESSAGE("${CMAKE_CURRENT_SOURCE_DIR}/PROJECT_QML_FILES: ${PROJECT_QML_FILES}")
 MESSAGE("${CMAKE_CURRENT_SOURCE_DIR}/QRC_FILES: ${PROJECT_QRC_FILES}")
+
+SET(SUB_FOLDERS
+    )
+
+FOREACH(item ${SUB_FOLDERS})
+    MESSAGE("Folder: " ${item})
+    ADD_SUBDIRECTORY(${item})
+ENDFOREACH(item)
