--- a/ui/logic/controller/CMakeLists.txt
+++ b/ui/logic/controller/CMakeLists.txt
@@ -1,8 +1,7 @@
 SET(ITEMS
-    main
-    CutConfiguration
-    Settings
-    SystemStatus
+    CutConfigurationController
+    CoreController
+    SettingsController
     )
 
 FOREACH(ITEM ${ITEMS})
