corretto CMakeLists.txt per compilazione (con dipendenze opengl per qml) aggiunto diversi UNSET perche', per ciascuna subdirectory, una variabile prende il valore della variabile della cartella padre se gia' settata (anche se lo scope della variabile non viene propagato al padre; vedere documentazione SET in help cmake)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,18 @@ SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 
 # configurazione ambiente QT
-FIND_PACKAGE(Qt5 COMPONENTS Core Gui Qml Quick Network LinguistTools REQUIRED)
+FIND_PACKAGE(Qt5 COMPONENTS
+    Core
+    Gui
+    Qml
+    Quick
+    QuickControls2
+    QuickTemplates2
+    Network
+    LinguistTools
+    REQUIRED)
+
+FIND_PACKAGE(Qt5QuickCompiler)
 
 MESSAGE("Qt5Core_VERSION: ${Qt5Core_VERSION}")
 MESSAGE("Qt5Core_LIBRARIES: ${Qt5Core_LIBRARIES}")
@@ -113,6 +124,22 @@ MESSAGE("Qt5Quick_COMPILE_DEFINITIONS: ${Qt5Quick_COMPILE_DEFINITIONS}")
 MESSAGE("Qt5Quick_FOUND: ${Qt5Quick_FOUND}")
 MESSAGE("Qt5Quick_EXECUTABLE_COMPILE_FLAGS: ${Qt5Quick_EXECUTABLE_COMPILE_FLAGS}")
 
+MESSAGE("Qt5QuickControls2_VERSION: ${Qt5QuickControls2_VERSION}")
+MESSAGE("Qt5QuickControls2_LIBRARIES: ${Qt5QuickControls2_LIBRARIES}")
+MESSAGE("Qt5QuickControls2_INCLUDE_DIRS: ${Qt5QuickControls2_INCLUDE_DIRS}")
+MESSAGE("Qt5QuickControls2_DEFINITIONS: ${Qt5QuickControls2_DEFINITIONS}")
+MESSAGE("Qt5QuickControls2_COMPILE_DEFINITIONS: ${Qt5QuickControls2_COMPILE_DEFINITIONS}")
+MESSAGE("Qt5QuickControls2_FOUND: ${Qt5QuickControls2_FOUND}")
+MESSAGE("Qt5QuickControls2_EXECUTABLE_COMPILE_FLAGS: ${Qt5QuickControls2_EXECUTABLE_COMPILE_FLAGS}")
+
+MESSAGE("Qt5QuickTemplates2_VERSION: ${Qt5QuickTemplates2_VERSION}")
+MESSAGE("Qt5QuickTemplates2_LIBRARIES: ${Qt5QuickTemplates2_LIBRARIES}")
+MESSAGE("Qt5QuickTemplates2_INCLUDE_DIRS: ${Qt5QuickTemplates2_INCLUDE_DIRS}")
+MESSAGE("Qt5QuickTemplates2_DEFINITIONS: ${Qt5QuickTemplates2_DEFINITIONS}")
+MESSAGE("Qt5QuickTemplates2_COMPILE_DEFINITIONS: ${Qt5QuickTemplates2_COMPILE_DEFINITIONS}")
+MESSAGE("Qt5QuickTemplates2_FOUND: ${Qt5QuickTemplates2_FOUND}")
+MESSAGE("Qt5QuickTemplates2_EXECUTABLE_COMPILE_FLAGS: ${Qt5QuickTemplates2_EXECUTABLE_COMPILE_FLAGS}")
+
 MESSAGE("Qt5Network_VERSION: ${Qt5Network_VERSION}")
 MESSAGE("Qt5Network_LIBRARIES: ${Qt5Network_LIBRARIES}")
 MESSAGE("Qt5Network_INCLUDE_DIRS: ${Qt5Network_INCLUDE_DIRS}")
@@ -121,21 +148,14 @@ MESSAGE("Qt5Network_COMPILE_DEFINITIONS: ${Qt5Network_COMPILE_DEFINITIONS}")
 MESSAGE("Qt5Network_FOUND: ${Qt5Network_FOUND}")
 MESSAGE("Qt5Network_EXECUTABLE_COMPILE_FLAGS: ${Qt5Network_EXECUTABLE_COMPILE_FLAGS}")
 
-MESSAGE("Qt5LinguistTools_VERSION: ${Qt5LinguistTools_VERSION}")
-MESSAGE("Qt5LinguistTools_LIBRARIES: ${Qt5LinguistTools_LIBRARIES}")
-MESSAGE("Qt5LinguistTools_INCLUDE_DIRS: ${Qt5LinguistTools_INCLUDE_DIRS}")
-MESSAGE("Qt5LinguistTools_DEFINITIONS: ${Qt5LinguistTools_DEFINITIONS}")
-MESSAGE("Qt5LinguistTools_COMPILE_DEFINITIONS: ${Qt5LinguistTools_COMPILE_DEFINITIONS}")
-MESSAGE("Qt5LinguistTools_FOUND: ${Qt5LinguistTools_FOUND}")
-MESSAGE("Qt5LinguistTools_EXECUTABLE_COMPILE_FLAGS: ${Qt5LinguistTools_EXECUTABLE_COMPILE_FLAGS}")
-
 SET(QT_LIBRARIES
     ${Qt5Core_LIBRARIES}
     ${Qt5Gui_LIBRARIES}
     ${Qt5Qml_LIBRARIES}
     ${Qt5Quick_LIBRARIES}
+    ${Qt5QuickControls2_LIBRARIES}
+    ${Qt5QuickTemplates2_LIBRARIES}
     ${Qt5Network_LIBRARIES}
-    ${Qt5LinguistTools_LIBRARIES}
     )
 MESSAGE("QT_LIBRARIES: ${QT_LIBRARIES}")
 
@@ -147,7 +167,6 @@ SET (THIRD_PARTY_PATH "${PROJECT_SOURCE_DIR}/third-party")
 MESSAGE("THIRD_PARTY_PATH: ${THIRD_PARTY_PATH}")
 
 SET(PROGRAM_PATH "$ENV{ProgramFiles}")
-
 SET(PROGRAM_PATH_X86 "$ENV{ProgramFiles\(x86\)}")
 
 MESSAGE("PROGRAM_PATH: ${PROGRAM_PATH}")
@@ -229,10 +248,12 @@ MESSAGE("CT_XMLAPI_DLL_PATH: ${CT_XMLAPI_DLL_PATH}")
 
 INCLUDE_DIRECTORIES(
     ${Qt5Core_INCLUDE_DIRS}
+    ${Qt5Gui_INCLUDE_DIRS}
     ${Qt5Qml_INCLUDE_DIRS}
     ${Qt5Quick_INCLUDE_DIRS}
+    ${Qt5QuickControls2_INCLUDE_DIRS}
+    ${Qt5QuickTemplates2d_INCLUDE_DIRS}
     ${Qt5Network_INCLUDE_DIRS}
-    ${Qt5LinguistTools_INCLUDE_DIRS}
     ${CT_XMLAPI_H_PATH})
 
 LINK_DIRECTORIES(
@@ -308,21 +329,24 @@ ENDIF ( MSVC )
 GET_PROPERTY(INCLUDE_DIRS DIRECTORY PROPERTY INCLUDE_DIRECTORIES)
 MESSAGE("INCLUDE_DIRS: ${INCLUDE_DIRS}")
 
+QTQUICK_COMPILER_ADD_RESOURCES(RESOURCES ${PROJECT_QRC_FILES})
 ADD_EXECUTABLE(${PROJECT_NAME}-${CUTTER_VERSION} WIN32
     main.cpp
     ${PROJECT_SOURCES}
     ${PROJECT_HEADERS}
     ${PROJECT_QML_FILES}
     ${PROJECT_QM_FILES}
-    ${PROJECT_QRC_FILES}
+    ${RESOURCES}
     ${PROJECT_TS_FILES}
     )
 ADD_DEFINITIONS(
     ${Qt5Core_DEFINITIONS}
+    ${Qt5Gui_DEFINITIONS}
     ${Qt5Qml_DEFINITIONS}
     ${Qt5Quick_DEFINITIONS}
+    ${Qt5QuickControls2_DEFINITIONS}
+    ${Qt5QuickTemplates2_DEFINITIONS}
     ${Qt5Network_DEFINITIONS}
-    ${Qt5LinguistTools_DEFINITIONS}
     )
 
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}-${CUTTER_VERSION}
@@ -356,7 +380,6 @@ FOREACH (CT_XML_DLL ${CT_XMLAPI_DLL_MANDATORY})
 ENDFOREACH(CT_XML_DLL)
 
 # FACOLTATIVE
-
 FOREACH (CT_XML_LIB ${CT_XMLAPI_LIBS})
     SET(CT_DLL_ITEM "${CT_XMLAPI_DLL_PATH}/${CT_XML_LIB}.dll")
     # emacs regex: Win32\([A-z0-9]\)\{0,\}\.
@@ -370,6 +393,7 @@ FOREACH (CT_XML_LIB ${CT_XMLAPI_LIBS})
         )
 ENDFOREACH(CT_XML_LIB)
 
+# OBBLIGATORIE (QT)
 FOREACH (DLL_ITEM ${QT_LIBRARIES})
     #    IF (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
     IF (DEBUG_MODE)
@@ -382,3 +406,28 @@ FOREACH (DLL_ITEM ${QT_LIBRARIES})
         POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy ${_loc} ${CMAKE_CURRENT_BINARY_DIR})
 ENDFOREACH(DLL_ITEM)
+
+MESSAGE("QMAKE_BIN_EXE: ${QT_QMAKE_EXECUTABLE}")
+GET_FILENAME_COMPONENT(QT_QMAKE_PATH "${QT_QMAKE_EXECUTABLE}" DIRECTORY)
+MESSAGE("QMAKE_PATH: ${QT_QMAKE_PATH}")
+
+# OBBLIGATORIE (QT DIPENDENZE)
+SET(QT_LIBRARIES_DEP "libEGL;libGLESv2;d3dcompiler_47;opengl32sw" CACHE STRING "Dipendeze dll QT/QML")
+FOREACH (QT_DLL_DEP_ITEM ${QT_LIBRARIES_DEP})
+    SET(DLL_NAME "${QT_DLL_DEP_ITEM}")
+    IF (DEBUG_MODE)
+        SET(DLL_DEP_PATH "${QT_QMAKE_PATH}/${DLL_NAME}d.dll")
+        IF (NOT EXISTS "${DLL_DEP_PATH}")
+            SET(DLL_DEP_PATH "${QT_QMAKE_PATH}/${DLL_NAME}.dll")
+        ENDIF()
+    ELSE()
+        SET(DLL_DEP_PATH "${QT_QMAKE_PATH}/${DLL_NAME}.dll")
+    ENDIF()
+
+    MESSAGE("DLL_DEP_PATH: ${DLL_DEP_PATH}")
+    IF (EXISTS "${DLL_DEP_PATH}")
+        ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME}-${CUTTER_VERSION}
+        POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy ${DLL_DEP_PATH} ${CMAKE_CURRENT_BINARY_DIR})
+    ENDIF()
+ENDFOREACH(QT_DLL_DEP_ITEM)
