--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -6,9 +6,14 @@ SET(ITEMS
     FactoryQml
     )
 
+UNSET(QML_FILES)
+UNSET(HEADERS)
+UNSET(SOURCES)
+UNSET(QRC_FILES)
+
 FOREACH(ITEM ${ITEMS})
     IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qml")
-        SET(QML_FILES ${UI_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qml")
+        SET(QML_FILES ${QML_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qml")
     ENDIF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qml")
 
     IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.hpp")
@@ -33,7 +38,7 @@ SET(PROJECT_QRC_FILES ${PROJECT_QRC_FILES} ${QRC_FILES} CACHE INTERNAL "")
 MESSAGE("${CMAKE_CURRENT_SOURCE_DIR}/PROJECT_SOURCES: ${PROJECT_SOURCES}")
 MESSAGE("${CMAKE_CURRENT_SOURCE_DIR}/PROJECT_HEADERS: ${PROJECT_HEADERS}")
 MESSAGE("${CMAKE_CURRENT_SOURCE_DIR}/PROJECT_QML_FILES: ${PROJECT_QML_FILES}")
-MESSAGE("${CMAKE_CURRENT_SOURCE_DIR}/QRC_FILES: ${PROJECT_QRC_FILES}")
+MESSAGE("${CMAKE_CURRENT_SOURCE_DIR}/PROJECT_QRC_FILES: ${PROJECT_QRC_FILES}")
 
 SET(SUB_FOLDERS
     )
