bugfix dipendenze per compilazione: all'interno di cmake uso il programma windeployqt, cosi' in automatico prende tutte le dipendenze delle dll di qt e qml

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -393,41 +393,54 @@ FOREACH (CT_XML_LIB ${CT_XMLAPI_LIBS})
         )
 ENDFOREACH(CT_XML_LIB)
 
-# OBBLIGATORIE (QT)
-FOREACH (DLL_ITEM ${QT_LIBRARIES})
-    #    IF (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
-    IF (DEBUG_MODE)
-        GET_TARGET_PROPERTY(_loc ${DLL_ITEM} LOCATION_DEBUG)
-    ELSE()
-        GET_TARGET_PROPERTY(_loc ${DLL_ITEM} LOCATION)
-    ENDIF()
-    MESSAGE("Plugin ${DLL_ITEM} is at location ${_loc}")
-    ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME}-${CUTTER_VERSION}
-        POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy ${_loc} ${CMAKE_CURRENT_BINARY_DIR})
-ENDFOREACH(DLL_ITEM)
+## OBBLIGATORIE (QT)
+#FOREACH (DLL_ITEM ${QT_LIBRARIES})
+#    #    IF (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+#    IF (DEBUG_MODE)
+#        GET_TARGET_PROPERTY(_loc ${DLL_ITEM} LOCATION_DEBUG)
+#    ELSE()
+#        GET_TARGET_PROPERTY(_loc ${DLL_ITEM} LOCATION)
+#    ENDIF()
+#    MESSAGE("Plugin ${DLL_ITEM} is at location ${_loc}")
+#    ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME}-${CUTTER_VERSION}
+#        POST_BUILD
+#        COMMAND ${CMAKE_COMMAND} -E copy ${_loc} ${CMAKE_CURRENT_BINARY_DIR})
+#ENDFOREACH(DLL_ITEM)
+
+#MESSAGE("QMAKE_BIN_EXE: ${QT_QMAKE_EXECUTABLE}")
+#GET_FILENAME_COMPONENT(QT_QMAKE_PATH "${QT_QMAKE_EXECUTABLE}" DIRECTORY)
+#MESSAGE("QMAKE_PATH: ${QT_QMAKE_PATH}")
+
+## OBBLIGATORIE (QT DIPENDENZE)
+#SET(QT_LIBRARIES_DEP "libEGL;libGLESv2;d3dcompiler_47;opengl32sw" CACHE STRING "Dipendeze dll QT/QML")
+#FOREACH (QT_DLL_DEP_ITEM ${QT_LIBRARIES_DEP})
+#    SET(DLL_NAME "${QT_DLL_DEP_ITEM}")
+#    IF (DEBUG_MODE)
+#        SET(DLL_DEP_PATH "${QT_QMAKE_PATH}/${DLL_NAME}d.dll")
+#        IF (NOT EXISTS "${DLL_DEP_PATH}")
+#            SET(DLL_DEP_PATH "${QT_QMAKE_PATH}/${DLL_NAME}.dll")
+#        ENDIF()
+#    ELSE()
+#        SET(DLL_DEP_PATH "${QT_QMAKE_PATH}/${DLL_NAME}.dll")
+#    ENDIF()
+
+#    MESSAGE("DLL_DEP_PATH: ${DLL_DEP_PATH}")
+#    IF (EXISTS "${DLL_DEP_PATH}")
+#        ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME}-${CUTTER_VERSION}
+#        POST_BUILD
+#        COMMAND ${CMAKE_COMMAND} -E copy ${DLL_DEP_PATH} ${CMAKE_CURRENT_BINARY_DIR})
+#    ENDIF()
+#ENDFOREACH(QT_DLL_DEP_ITEM)
 
 MESSAGE("QMAKE_BIN_EXE: ${QT_QMAKE_EXECUTABLE}")
-GET_FILENAME_COMPONENT(QT_QMAKE_PATH "${QT_QMAKE_EXECUTABLE}" DIRECTORY)
-MESSAGE("QMAKE_PATH: ${QT_QMAKE_PATH}")
-
-# OBBLIGATORIE (QT DIPENDENZE)
-SET(QT_LIBRARIES_DEP "libEGL;libGLESv2;d3dcompiler_47;opengl32sw" CACHE STRING "Dipendeze dll QT/QML")
-FOREACH (QT_DLL_DEP_ITEM ${QT_LIBRARIES_DEP})
-    SET(DLL_NAME "${QT_DLL_DEP_ITEM}")
-    IF (DEBUG_MODE)
-        SET(DLL_DEP_PATH "${QT_QMAKE_PATH}/${DLL_NAME}d.dll")
-        IF (NOT EXISTS "${DLL_DEP_PATH}")
-            SET(DLL_DEP_PATH "${QT_QMAKE_PATH}/${DLL_NAME}.dll")
-        ENDIF()
-    ELSE()
-        SET(DLL_DEP_PATH "${QT_QMAKE_PATH}/${DLL_NAME}.dll")
-    ENDIF()
-
-    MESSAGE("DLL_DEP_PATH: ${DLL_DEP_PATH}")
-    IF (EXISTS "${DLL_DEP_PATH}")
-        ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME}-${CUTTER_VERSION}
-        POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy ${DLL_DEP_PATH} ${CMAKE_CURRENT_BINARY_DIR})
-    ENDIF()
-ENDFOREACH(QT_DLL_DEP_ITEM)
+FIND_PROGRAM(WINDEPLOYQT_EXECUTABLE windeployqt HINTS "${QT_QMAKE_EXECUTABLE}")
+GET_TARGET_PROPERTY(QMAKE_EXECUTABLE Qt5::qmake IMPORTED_LOCATION)
+GET_FILENAME_COMPONENT(QT_BIN_DIR "${QMAKE_EXECUTABLE}" DIRECTORY)
+MESSAGE("WINDEPLOYQT_EXECUTABLE: ${WINDEPLOYQT_EXECUTABLE}")
+MESSAGE("QT_BIN_DIR: ${QT_BIN_DIR}")
+ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME}-${CUTTER_VERSION} POST_BUILD
+    COMMAND "${CMAKE_COMMAND}" -E
+        env PATH="${QT_BIN_DIR}" ${WINDEPLOYQT_EXECUTABLE}
+            "-qmldir" "${CMAKE_SOURCE_DIR}/ui/qml" "$<TARGET_FILE:${PROJECT_NAME}-${CUTTER_VERSION}>"
+    COMMENT "Running windeployqt..."
+)
