prima versione con gestione listView;

--- a/ui/qml/CMakeLists.txt
+++ b/ui/qml/CMakeLists.txt
@@ -1,8 +1,9 @@
 SET(ITEMS
     main
-    CutConfiguration
-    Settings
+    Setup
     SystemStatus
+    Settings
+    Info
     )
 
 UNSET(QML_FILES)
