--- a/ui/logic/controller/CMakeLists.txt
+++ b/ui/logic/controller/CMakeLists.txt
@@ -1,5 +1,5 @@
 SET(ITEMS
-    CutConfigurationController
+    SetupController
     CoreControllerPrivate
     CoreController
     SettingsController
