aggiunto classe gestione status SMC;

--- a/ui/logic/controller/CMakeLists.txt
+++ b/ui/logic/controller/CMakeLists.txt
@@ -3,6 +3,7 @@ SET(ITEMS
     CoreControllerPrivate
     CoreController
     SettingsController
+    SystemStatusController
     )
 
 UNSET(QML_FILES)
